# mscthesis

./: CMakeLists.txt  RoterFaden.org
src/: Acknowledgement.tex  ICD.tex  UrbanHeatIslands.tex  abstact.tex  acknowledgement.tex  airTemp.tex  background.tex  futureWork.tex  humidity.tex  introduction.tex  lst.tex  main.tex  ndvi.tex  pipelinetrain.tikz.tex  pipelinetrained.tikz.tex  refs.bib  refsOld.bib  thesis.tex  title.tex
src/res/: settings.tex
